--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "i18next": "^23.7.16",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^14.0.5",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
