--- a/package.json
+++ b/package.json
@@ -49,10 +49,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/react-helmet": "^6.1.11",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4"
+    "@types/react-helmet": "^6.1.11"
   }
 }
